# example-account-api-server

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: rust.yml
client/: Cargo.toml
server/: Cargo.toml  build.rs
server/migrations/2023-06-28-233801_create_accounts/: up.sql
server/src/: handlers.rs  main.rs
server/src/database/: models.rs  schema.rs
spec/: account.proto
