[package]
name = "example-account-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15"
prost = "0.11.9"
tonic = "0.9.2"
chrono = "0.4.26"
uuid = "1.4.0"
tonic-reflection = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
